# kuri

./: .flake8  .gitignore  README.md
audio_msgs/: CMakeLists.txt  README.md  package.xml
audio_msgs/srv/: WakeUp.srv
gizmo_description/: CMakeLists.txt  README.md  package.xml
gizmo_description/meshes/sensors/: camera_link.STL  hokuyo.dae  (+4 more)
gizmo_description/urdf/: common_properties.urdf.xacro
gizmo_msgs/: CMakeLists.txt  README.md  package.xml
gizmo_msgs/action/: CalibrationPath.action  RecordBagfile.action
gizmo_msgs/msg/: Action.msg  Awake.msg  Bumpers.msg  CalibrationPathAction.msg  CalibrationPathActionFeedback.msg  CalibrationPathActionGoal.msg  CalibrationPathActionResult.msg  CalibrationPathFeedback.msg  CalibrationPathResult.msg  ChestLED.msg  ClientTouch.msg  ClientWaypoint.msg  Command.msg  CompressedOccupancyGrid.msg  Connection.msg  Exchange.msg  Field.msg  FilteredBattery.msg  MomentAction.msg  MomentActions.msg  MqttMessage.msg  NavigationFeedback.msg  NavigationGoal.msg  RecordBagfileAction.msg  RecordBagfileActionFeedback.msg  RecordBagfileActionGoal.msg  RecordBagfileActionResult.msg  RecordBagfileGoal.msg  RecordBagfileResult.msg  RomojiFeedback.msg  RomojiGoal.msg  StringStamped.msg  Volume.msg  VolumeButton.msg
gizmo_msgs/srv/: GetDirection.srv  GetField.srv  ListFields.srv  MqttStatus.srv  RobotInfo.srv  SetField.srv  Stat.srv  UploaderStatus.srv
kuri_api/: CMakeLists.txt  README.md  package.xml  setup.py
kuri_api/launch/: volume_interface.launch
kuri_api/scripts/: animations_demo  base_demo  listener_demo  record_audio_alsa  record_video  save_image_sequence  volume_interface
kuri_audio/: CMakeLists.txt  package.xml
kuri_audio/launch/: audio_voice_delegate.launch
kuri_audio/scripts/: audio_voice_delegate
kuri_camera/: CMakeLists.txt  README.md  package.xml
kuri_camera/cfg/: KuriCamera.cfg  camera_calibration_parameters.yaml
kuri_camera/config/: tcp_params.yaml
kuri_camera/include/: display_compressed_images.h  h264_decoder.h  h264_decoder_on_kuri.h
kuri_camera/launch/: h264_decoder_node.launch  h264_decoder_node_on_kuri.launch  kuri_camera_publisher.launch  ros_publisher.launch  tcp_test_client.launch  uds_to_tcp.launch  uds_to_tcp_using_madmux_library.launch
kuri_camera/scripts/: kuri_camera_publisher.py  ros_publisher.py  ros_publisher_test.py  save_image.py
kuri_camera/src/: display_compressed_images.cpp  h264_decoder.cpp  h264_decoder_node.cpp  h264_decoder_node_on_kuri.cpp  h264_decoder_on_kuri.cpp  h264_decoder_on_kuri_working.cpp  h264_decoder_on_kuri_working_but_wasnt.cpp  kuri_camera_publisher.cpp  kuri_camera_subscriber.cpp  ros_publisher.cpp  ros_publisher_test.cpp  save_image.cpp  tcpClient.cpp  tcp_test_client.cpp  udsToTCP.cpp  uds_to_TCP.cpp  uds_to_tcp.cpp  uds_to_tcp_using_madmux_library.cpp
kuri_gazebo/: CMakeLists.txt  README.md  kuri_gazebo_plugins.xml  package.xml
kuri_gazebo/config/: eyelids_controller.yaml  head_controller.yaml  joint_state_controller.yaml  mobile_base_controller.yaml  pids.yaml
kuri_gazebo/launch/: kuri_bringup.launch  kuri_gazebo.launch  kuri_spawn.launch
kuri_gazebo/scripts/: fake_bump
kuri_gazebo/src/: kuri_hardware_gazebo.cpp
kuri_joystick_teleop/: CMakeLists.txt  README.md  package.xml
kuri_joystick_teleop/include/: kuri_joystick_teleop.h
kuri_joystick_teleop/launch/: kuri_joystick_teleop.launch
kuri_joystick_teleop/src/: kuri_joystick_teleop.cpp
kuri_launch/: CMakeLists.txt  README.md  package.xml
kuri_launch/config/: kuri.rviz  kuri_mapping.rviz
kuri_launch/env-hooks/: kuri_launch.sh
kuri_launch/launch/: kuri.launch  kuri_mapping.launch
kuri_navigation/: CMakeLists.txt  README.md  package.xml  setup.py
kuri_navigation/env-hooks/: kuri_navigation.sh
kuri_navigation/launch/: amcl.launch  gmapping.launch  may_nav.launch  may_nav_oort.launch  move_base_kuri.launch  nav.launch
kuri_navigation/maps/: empty_map.yaml
kuri_navigation/scripts/: keyboard_teleop  mapping_controller  may_nav_controller  safety_controller
kuri_navigation/src/: bumper_to_pointcloud.cpp
kuri_person_tracking/: CMakeLists.txt  README.md  package.xml  requirements.txt
kuri_person_tracking/config/: ros.yaml
kuri_person_tracking/launch/: move_towards.launch  person_detection.launch
kuri_person_tracking/misc/: single_image_detect.py
kuri_person_tracking/msg/: BoundingBox.msg  BoundingBoxes.msg
kuri_person_tracking/scripts/: download_yolo.bash  kuri_params.py  move_towards.py  person_detection.py  position_head.py
kuri_slack_bot/: CMakeLists.txt  README.md  app.py  dummy_publisher.py  package.xml  requirements.txt  slack_bot.py
kuri_slack_bot/launch/: slack_bot.launch
kuri_teleop/: CMakeLists.txt  README.md  package.xml
kuri_teleop/config/: teleop.perspective
kuri_teleop/env-hooks/: kuri_navigation.sh  kuri_teleop.sh
kuri_teleop/launch/: joystick_teleop.launch  keyboard_teleop.launch
kuri_teleop/rviz/: kuri_teleop.rviz
kuri_teleop/scripts/: keyboard_teleop
kuri_teleop/src/: display_heading_arrow.cpp  joystick_teleop.cpp
kuri_web_teleop/: CMakeLists.txt  README.md  package.xml
kuri_web_teleop/frontend/: index.html  main.css  main.js
kuri_web_teleop/launch/: web_teleop.launch
kuri_web_teleop/src/: add_image_overlay.cpp
madmux/: CMakeLists.txt  README.md  package.xml
madmux/include/: madmux.h
may_nav_msgs/: CMakeLists.txt  README.md  package.xml
may_nav_msgs/action/: Navigate.action
may_nav_msgs/msg/: CostMap.msg  ScoredTrajectories.msg
may_nav_msgs/srv/: GetCostMap.srv  GetObstacleDist.srv
mayfield_msgs/: CMakeLists.txt  README.md  package.xml
mayfield_msgs/msg/: KeyValue.msg  KeyValueArray.msg  NodeStatus.msg
mayfield_msgs/srv/: StringExchange.srv
mobile_base_driver/: CMakeLists.txt  README.md  package.xml
mobile_base_driver/action/: ArcMove.action
mobile_base_driver/msg/: BatteryCapacity.msg  Bumper.msg  ChestLeds.msg  CliffArray.msg  CliffSensor.msg  Clothesline.msg  Led.msg  Motor.msg  Power.msg  SafetyStatus.msg  Sensors.msg  Stall.msg  Telescope.msg  Touch.msg  WheelDrop.msg  WheelTraj.msg  WheelTrajPoint.msg
(+114 files in other folders)
