<?xml version="1.0"?>
<package>
  <name>audio_msgs</name>
  <version>1.0.0</version>
  <description>Messages used by the mayfield_audio package</description>
  <maintainer email="adam@mayfieldrobotics.com">Adam Setapen</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mayfield_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mayfield_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
