<package>
  <name>gizmo_description</name>
  <version>14.3.1</version>
  <description>
    URDFs for Gizmo and variants
  </description>
  <author>Kaijen Hsiao</author>
  <author email="kaijen@mayfieldrobotics.com">Kaijen Hsiao</author>
  <maintainer email="kaijen@mayfieldrobotics.com">Kaijen Hsiao</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

  <test_depend>roslib</test_depend>

</package>
