<?xml version="1.0"?>
<package>
  <name>gizmo_msgs</name>
  <version>14.3.1</version>
  <description>The gizmo_msgs package</description>

  <maintainer email="sarah.osentoski@us.bosch.com">Sarah Osentoski</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>audio_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>mobile_base_driver</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mayfield_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>audio_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>mobile_base_driver</run_depend>
  <run_depend>mayfield_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>
  </export>
</package>
