<?xml version="1.0"?>
<package format="2">
  <name>kuri_api</name>
  <version>0.1.0</version>
  <description>High-level API for controlling the Kuri robot.</description>
  <maintainer email="nswalker@cs.uw.edu">Nick Walker</maintainer>
  <license>None</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>actionlib</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <exec_depend>trajectory_msgs</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <export>
  </export>
</package>
