<?xml version="1.0"?>
<package>
  <name>kuri_audio</name>
  <version>1.0.0</version>
  <description>Kuri audio nodes</description>

  <maintainer email="nswalker@cs.uw.edu">Nick Walker</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
