<?xml version="1.0"?>
<package format="2">
  <name>kuri_camera</name>
  <version>0.1.0</version>
  <description>The kuri_camera package</description>

  <maintainer email="nswalker@cs.uw.edu">Nick Walker</maintainer>


  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>madmux</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>


</package>
