<?xml version="1.0"?>
<package format="2">
  <name>kuri_gazebo</name>
  <version>0.1.0</version>
  <description>The kuri_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nswalker@cs.uw.edu">Nick Walker</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>angles</depend>
  <depend>control_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>gazebo_ros_control</depend>
  <exec_depend>gizmo_description</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->

  <export>
    <gazebo_ros_control plugin="${prefix}/kuri_gazebo_plugins.xml"/>
  </export>

</package>
