<?xml version="1.0"?>
<package format="2">
  <name>kuri_gazebo</name>
  <version>0.1.0</version>
  <description>The kuri_gazebo package</description>

  <maintainer email="nswalker@cs.uw.edu">Nick Walker</maintainer>



  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>angles</depend>
  <depend>control_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>gazebo_ros_control</depend>
  
  
  <build_depend>gazebo</build_depend>
  
  <exec_depend>gizmo_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>kuri_audio</exec_depend>
  <exec_depend>kuri_navigation</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <export>
    <gazebo_ros_control plugin="${prefix}/kuri_gazebo_plugins.xml"/>
  </export>

</package>
