<?xml version="1.0"?>
<package format="2">
  <name>kuri_launch</name>
  <version>0.0.0</version>
  <description>The hcrl_kuri package</description>

  <maintainer email="nswalker@cs.uw.edu">nswalker</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>madmux</exec_depend>

</package>
