<?xml version="1.0"?>
<package format="2">
  <name>kuri_launch</name>
  <version>0.0.0</version>
  <description>The hcrl_kuri package</description>

  <maintainer email="nswalker@cs.uw.edu">nswalker</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>madmux</exec_depend>
  <exec_depend>kuri_api</exec_depend>
  <exec_depend>kuri_camera</exec_depend>
  <exec_depend>kuri_navigation</exec_depend>
  <exec_depend>mobile_base_driver</exec_depend>

</package>
