<?xml version="1.0"?>
<package format="2">
  <name>kuri_navigation</name>
  <version>0.1.0</version>
  <description>Navigation configuration for Kuri</description>

  <maintainer email="nswalker@cs.uw.edu">Nick Walker</maintainer>


  <license>None</license>

  <exec_depend>amcl</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>mobile_base_driver</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <buildtool_depend>catkin</buildtool_depend>



</package>
