<?xml version="1.0"?>
<package format="2">
  <name>kuri_person_tracking</name>
  <version>0.0.0</version>
  <description>The person_tracking package</description>

  <maintainer email="atikinf@gmail.com">nikitaf</maintainer>


  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
