<?xml version="1.0"?>
<package format="2">
  <name>kuri_slack_bot</name>
  <version>0.0.0</version>
  <description>The kuri_slack_bot package</description>

  <maintainer email="nikitaf@todo.todo">nikitaf</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>


  </export>
</package>
