<?xml version="1.0"?>
<package format="2">

  <name>kuri_teleop</name>
  <version>0.0.0</version>
  <description>A teleoperation package for Kuri</description>
  <maintainer email="amaln@cs.uw.edu">Amal Nanavati</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>joy</depend>
  <depend>tf</depend>

</package>
