<?xml version="1.0"?>
<package format="2">
  <name>kuri_web_teleop</name>
  <version>0.0.0</version>
  <description>The web_teleop package</description>

  <maintainer email="nikita@todo.todo">nikita</maintainer>


  <license>MIT</license>

  <depend>mobile_base_driver</depend>
  <depend>compressed_image_transport</depend>
  <depend>image_geometry</depend>
  <depend>tf</depend>

  <build_depend>actionlib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>joy</build_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>web_video_server</build_depend>
  
  <exec_depend>kuri_camera</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
