<?xml version="1.0"?>
<package format="2">
    <name>madmux</name>
    <version>0.2.0</version>
    <description>The madmux package</description>

    <maintainer email="nswalker@cs.uw.edu">Nick Walker</maintainer>

    <license>None</license>

    <buildtool_depend>catkin</buildtool_depend>


</package>
