<package>
    <name>may_nav_msgs</name>
    <version>14.3.1</version>
    <description>Messages/actions for may_nav</description>

    <maintainer email="jon.binney@mayfieldrobotics.com">Jon Binney</maintainer>
    <license>For Mayfield use only</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>actionlib_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
</package>
