<?xml version="1.0"?>
<package>
  <name>mayfield_msgs</name>
  <version>1.0.0</version>
  <description>Common ROS messages shared between repositories</description>

  <maintainer email="adam@mayfieldrobotics.com">Adam Setapen</maintainer>

  <license>Proprietary</license>

  <url type="website">https://github.com/mayfieldrobotics/mayfield_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
